# x5-recruitment-system

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  task.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  schema.sql
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 7e55aac9daee_add_assessment_tables.py  94162b09c78b_add_all_models.py  abc123def456_add_candidate_fields_and_feedback.py  c90d0161a6f2_initial_migration.py  cfd7ce05a97b_update_team_model_remove_hiring_manager_.py  eaa7a0c6db30_major_refactor_telegram_auth_hiring_.py
backend/app/modules/assessment/: models.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/candidates/: models.py  router.py  schemas.py  service.py
backend/app/modules/hiring_managers/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: models.py
backend/app/modules/recruitment/: models.py
backend/app/modules/vacancies/: models.py  pools_router.py  schemas.py  service.py  tracks_router.py  vacancies_router.py
backend/app/shared/: enums.py  models.py  schemas.py  utils.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: auth.ts
ml-service/: .env.example  README.md  pyproject.toml
ml-service/app/: __init__.py  config.py  main.py  schemas.py
